--- a/index.html
+++ b/index.html
@@ -1868,7 +1868,7 @@
 
             if (JSON.stringify(konamiCode) === JSON.stringify(konami)) {
                 document.body.style.animation = 'glitch-animation 0.5s ease 5';
-                alert('🎮 HACKER MODE ACTIVATED! 🎮');
+                alert(' HACKER MODE ACTIVATED!, u found the easter egg 🐰🥚 ');
                 setTimeout(() => {
                     document.body.style.animation = '';
                 }, 2500);
