--- a/index.html
+++ b/index.html
@@ -867,6 +867,16 @@
         .contact-icon {
             font-size: 3rem;
             margin-bottom: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 60px;
+        }
+
+        .contact-icon-img {
+            width: 50px;
+            height: 50px;
+            object-fit: contain;
         }
 
         .contact-label {
@@ -1412,12 +1422,12 @@
                     opportunities and connections.</p>
                 <div class="contact-grid">
                     <a href="mailto:sidimuhamed904@gmail.com" class="contact-card">
-                        <div class="contact-icon">📧</div>
+                        <div class="contact-icon"><img src="contact.png" alt="Email" class="contact-icon-img"></div>
                         <div class="contact-label">EMAIL</div>
                         <div class="contact-value">sidimuhamed904@gmail.com</div>
                     </a>
                     <a href="https://github.com/sidim-prog" target="_blank" class="contact-card">
-                        <div class="contact-icon">💻</div>
+                        <div class="contact-icon"><img src="projects.png" alt="GitHub" class="contact-icon-img"></div>
                         <div class="contact-label">GITHUB</div>
                         <div class="contact-value">github.com/sidim-prog</div>
                     </a>
